turn nav black on scroll

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,7 @@ header {
   padding-right: 1rem;
 }
 .nav-scrolled {
-  background-color: #fff;
-  color: #cacaca;
+  background-color: #000;
 }
 
 /*home*/
